This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/13/25: Fixed SetDoseFracParams to control frame saving for DE cameras
(In 4.1).

10/12/25: Fixed bad stage positions (particularly Z) being recorded on JEOL at
the end of stage movements, broken 8/19/25 (In 4.2).

10/6/2025: Multi-Hole combiner automatically sorts combined items into a more 
optimized path to reduce distance traveled during acquisition.

10/3/25: Fixed hang setting screen position on a JEOL F200 at start of Low
Dose tilt series using JEOL STEM (In 4.2).

9/24/25: SEM_4-2-9
9/24/25: Packaged new DLLs for DE that allow API2 to be used with server
2.5.17 and higher (In 4.2).

9/23/25: SEM_4-3-0beta1
9/23/25: Fixed order of setting subarea parameters in JEOL STEM (In 4.2).

9/23/25: Changed setting of focus in LM STEM on a JEOL to use a different
function call unless property UseCL3ToSetLMStemFocus is set (In 4.2).

9/23/25: Added script command to get the image shift values of the hole
nearest to the center of a multishot pattern for an item.

9/23/25: Added property to set the scaling factor put in the command file for
aligning EER images in IMOD.

9/23/25: Added script command to get the convergence angle on a Titan.

9/23/25: Convergence angle is recorded when STEM focus calibration is done on
a Titan, and when autofocusing, the slope of the calibration is adjusted 
proportionally for a change in convergence angle.

9/17/25: Added property to set extra timeout for STEM images.

9/17/25: For DE cameras, the "Set Folder" button in the camera setup dialog
opens a folder selection dialog if the camera server is 1.0.943 or newer 
and running locally.  

9/17/25: For DE cameras, if the camera server is 1.0.943 or newer and running