@@ -5389,6 +5389,11 @@
             value.<TD>
         </TR>
         <TR>
+          <TD class="scriptcommand">GetMapIndexes var</TD>
+          <TD>Gets the navigator indices of all maps and places them in increasing order in an 
+              array variable named <strong>var</strong>.&nbsp; <TD>
+                &nbsp;</TR>
+        <TR>
           <TD colspan="2"><A name="hole_square_finding"></A><B>Hole and Grid Square Finding Commands</B></TD>
         </TR>
               <TR>
