@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+10/13/25: Added script command to get a list of map navigator indexes.
+
 10/13/25: Fixed SetDoseFracParams to control frame saving for DE cameras
 (In 4.1).
 
